--- a/html-and-css-prototype/index.html
+++ b/html-and-css-prototype/index.html
@@ -6,12 +6,38 @@
     <link rel="stylesheet" href="CSS/stylesheet.css">
   </head>
   <body>
-    <div class="container">
+    <!-- <div class="container">
       <h1>Recreate this using HTML &amp; CSS</h1>
       <img src="https://s3.amazonaws.com/f.cl.ly/items/2z3C3Z0L2Q0R282p1V0z/Image%202014-12-19%20at%2010.07.09%20AM.png" width="303" />
-    </div>
+    </div> -->
 
-    <!-- Your code goes here -->
+    <main>
+      <div class="speech-bubble">
+        <h2><b>$167</b> still needed for this project</h2>
+      </div>
+
+
+      <div class="progress-box">
+        <div class="progress">
+        </div>
+      </div>
+
+      <div class="border-box">
+        <p class="description"><bold>Only 3 days left</bold> to fund this project.</p><br>
+        <p class="description">Join the <b>42</b> other donors who have already supported this project. Every dollar helps.</p>
+        <div class="button-box">
+          <h3 class="button value">$<b style="color:black;"> 50</b></h3>
+          <h3 class="button give">Give Now</h3>
+        </div>
+        <br>
+        <p class="whygive"><i>Why give $50?</i></p>
+
+      </div>
+      <div class="button-box">
+        <h3 class="button save">Save for later</h3>
+        <h3 class="button friends">Tell your friends</h3>
+      </div>
+    </main>
 
 
 
