--- a/html-and-css-prototype/index.html
+++ b/html-and-css-prototype/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>HTML/CSS Prototype</title>
     <link rel="stylesheet" href="CSS/stylesheet.css">
+    <meta name="viewport" content="width=device-width, initial-scale=2.0, maximum-scale=1.0, user-scalable=no">
   </head>
   <body>
     <!-- <div class="container">
@@ -15,13 +16,10 @@
       <div class="speech-bubble">
         <h2><b>$167</b> still needed for this project</h2>
       </div>
-
-
       <div class="progress-box">
         <div class="progress">
         </div>
       </div>
-
       <div class="border-box">
         <p class="description"><bold>Only 3 days left</bold> to fund this project.</p><br>
         <p class="description">Join the <b>42</b> other donors who have already supported this project. Every dollar helps.</p>
@@ -31,15 +29,11 @@
         </div>
         <br>
         <p class="whygive"><i>Why give $50?</i></p>
-
       </div>
       <div class="button-box">
         <h3 class="button save">Save for later</h3>
         <h3 class="button friends">Tell your friends</h3>
       </div>
     </main>
-
-
-
   </body>
 </html>
